--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-149177528-1');
 </script>
 		
-		<title>Analyticsafe</title>
+		<title>Solid'App</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
@@ -21,27 +21,27 @@
 	  <div class="banner"> 
 	  	<div class="container"> 
 	  	  <h1>PROTECT YOUR PERSONAL DATA</h1>
-	  	  <h2>Let's keep your personal life <strong>private</strong> thanks to <strong> ANALYTICSAFE</strong>.</h2>
-	  	  <a href="#apply-section" class="btn-blue">Start Now!<a/>
+	  	  <h2>Créer le lien privilégié entre <strong> des bénévoles disponibles</strong> et <strong> des associations en manque de volontaires!</strong>.</h2>
+	  	  <a href="#apply-section" class="btn-blue">Lancez-vous!<a/>
 	  	</div>
 	  </div>
 
 		<div class="container"> 
 		  
-		  <h2>Discover our tailored solutions for everyone! Come discover the benefits of being active online without the threat of leaks of your personal data.</h2>
+		  <h2>Solid'App vise à connecter: le besoin de bénévoles pour des missions (ponctuelles ou long terme) et les disponibilités de personnes désireuses de donner de leur temps.</h2>
 
 		  <div class="cards">
 		  	<div class="card">
 		  	  <img src="images/B2B.jpeg" alt="Professional Customers">
-		  	  <h3>Securing Business Digital Assets</h3> 
+		  	  <h3>Découvrez les missions disponibles</h3> 
 		  	</div>
 		  	<div class="card">
 		  	  <img src="images/customers.jpeg" alt="Professional Customers">
-		  	  <h3>Customers' Privacy</h3> 
+		  	  <h3>Créez votre compte maintenant</h3> 
 		  	</div>
 		  	<div class="card">
 		  	  <img src="images/blockchain.jpeg" alt="Professional Customers">
-		  	  <h3>Learn the newest and safest digital practices</h3> 
+		  	  <h3>Comment soutenir les associations ? </h3> 
 		  	</div>
 		  </div>
 		</div>
